# AOC-2025

./: README.md  day_1_task_1.py  pyproject.toml
day_1/: day_1_task_1.py  day_1_task_2.py
day_2/: day_2_task_1.py  day_2_task_2.py
day_3/: day_3_task_1.py  day_3_task_2.py
day_4/: day_4_task_1.py  day_4_task_2.py
day_5/: day_5_task_1.py  day_5_task_2.py
day_6/: day_6_task_1.py  day_6_task_2.py
day_7/: day_7_task_1.py  day_7_task_2.py
day_8/: day_8_task_1.py  day_8_task_2.py
day_9/: day_9_task_1.py
src/aoc_2025/: __init__.py
testing/: aoc.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  main.py
